Adjust padding for h1 element in main section to fix elements alignment

--- a/styles/base.css
+++ b/styles/base.css
@@ -112,7 +112,7 @@ main {
   }
 
   & h1 {
-    padding: 0 0 0 10px;
+    padding: 0 0 0 12px;
   }
 
   & h2 {
